[package]
name = "meta"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "2.33.3", features = ["yaml"] }
futures-util = "0.3.17"
shiplift = "0.7.0"
tokio = { version = "1.11.0", features = ["macros"] }